logs/pythonshare.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/animals'...
Compiling './lib/python3.5/site-packages/animals/dog.py'...
***   File "./lib/python3.5/site-packages/animals/dog.py", line 4
    print "dog"
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/animals/pig.py'...
***   File "./lib/python3.5/site-packages/animals/pig.py", line 4
    print "pig"
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/colours'...
Compiling './lib/python3.5/site-packages/colours/blue.py'...
***   File "./lib/python3.5/site-packages/colours/blue.py", line 4
    print "blue"
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/colours/red.py'...
***   File "./lib/python3.5/site-packages/colours/red.py", line 4
    print "red"
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pen.py'...
***   File "./lib/python3.5/site-packages/pen.py", line 4
    print "pen"
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pencil.py'...
***   File "./lib/python3.5/site-packages/pencil.py", line 4
    print "pencil"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/people'...
Compiling './lib/python3.5/site-packages/people/boy.py'...
***   File "./lib/python3.5/site-packages/people/boy.py", line 4
    print "boy"
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/people/girl.py'...
***   File "./lib/python3.5/site-packages/people/girl.py", line 4
    print "girl"
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pythonshare-1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
